--- a/index.html
+++ b/index.html
@@ -111,27 +111,42 @@
         <div class="projects-grid">
 
           <div class="project-card">
-            <img src="https://picsum.photos/300/200" alt="Project image">
-            <!-- <img src="project1.jpg" alt="Project 1 Screenshot"> -->
-            <h3>Project Title</h3>
-            <p>Short description of the project. What it does, what tech you used, etc.</p>
-            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
-          </div>
-      
-          <div class="project-card">
-            <img src="https://picsum.photos/300/200" alt="Project image">
+            <img src="Images\Projects\IamAlive.jpg" alt="IamAlive">
             <!-- <img src="project2.jpg" alt="Project 2 Screenshot"> -->
-            <h3>Project 2</h3>
-            <p>Brief description goes here.</p>
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
+            <h3>IamAlive</h3>
+            <p>API application with a structured OOP architecture, integrating a check-in system for user communication. </p>
+            <a href="https://github.com/mohald-3/IamAlive" target="_blank">View on GitHub</a>
+          </div>
+
+                    <div class="project-card">
+            <img src="Images\Projects\ParkIt.jpg" alt="Project image">
+            <!-- <img src="project2.jpg" alt="Project 2 Screenshot"> -->
+            <h3>ParkIt</h3>
+            <p>Console-based parking application integrating a relational database for parking session management.</p>
+            <a href="https://github.com/WardBeniamin/ParkeringsAppGroupProject" target="_blank">View on GitHub</a>
+          </div>
+
+                    <div class="project-card">
+            <img src="Images\Projects\LibraryConsoleApp.jpg" alt="Library Console Application">
+            <h3>Generic Library Console Application</h3>
+            <p>Repository-pattern-based library system utilizing JSON file management for modularity and testability</p>
+            <a href="https://github.com/mohald-3/Library_Console_App" target="_blank">View on GitHub</a>
           </div>
 
           <div class="project-card">
-            <img src="https://picsum.photos/300/200" alt="Project image">
+            <img src="Images/Projects/BankConsoleApp.jpg" alt="Bank Console Application V2">
             <!-- <img src="project2.jpg" alt="Project 2 Screenshot"> -->
-            <h3>Project 3</h3>
-            <p>Brief description goes here.</p>
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
+            <h3>Bank Console Application V2</h3>
+            <p>Scalable, modular banking system implementing object-oriented principles, generic classes/methods, and unit testing for robustness.</p>
+            <a href="https://github.com/mohald-3/ConsoleBankApplicationV2" target="_blank">View on GitHub</a>
+          </div>
+
+          <div class="project-card">
+            <img src="Images/Projects/BankConsoleApp.jpg" alt="Bank Console Application">
+            <!-- <img src="project2.jpg" alt="Project 2 Screenshot"> -->
+            <h3>Bank Console Application</h3>
+            <p>First every bank console application.</p>
+            <a href="https://github.com/mohald-3/BankConsoleApp" target="_blank">View on GitHub</a>
           </div>
           <!-- Add more project cards here... -->
         </div>
